# TetrixGame

./: .gitignore  CMakeLists.txt  README.md  README_PSEUDOCODE.md  highscores.txt
src/: TetrixBoard.cpp  TetrixBoard.h  TetrixPiece.cpp  TetrixPiece.h  TetrixWindow.cpp  TetrixWindow.h  main.cpp
